rough outline for each page

--- a/ausopen.html
+++ b/ausopen.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Australian Open</title>
   <link href="Aus Open/ausopen.css" rel=stylesheet type="text/css">
-
+  <link href='https://fonts.googleapis.com/css?family=Actor' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Poppins:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="topnav">
@@ -16,7 +17,11 @@
     <a href= "usopen.html">US Open</a>
   </div>
 
+<h1><strong>Australian Open</strong></h1>
+<h2><strong>Melbourne, Australia</strong></h2>
 
+<img src="https://cdn1.theweek.co.uk/sites/theweek/files/2020/01/australian_open_tennis_grand_slam_rod_laver_arena_melbourne_gettyimages-1084502602.jpg"
+alt="Australian Open match" class="mainpic">
 
 </body>
 </html>
