--- a/roland-garros.html
+++ b/roland-garros.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Roland-Garros</title>
   <link href="Roland-Garros/roland-garros.css" rel="stylesheet"  type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Actor' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Poppins:ital@1&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <div class="topnav">
@@ -14,6 +17,80 @@
     <a href= "wimbledon.html">Wimbledon</a>
     <a href= "usopen.html">US Open</a>
   </div>
+
+<h1><strong>Roland-Garros</strong></h1>
+<h2><strong>Paris, France</strong></h2>
+
+<img src="https://www.atptour.com/en/tournaments/roland-garros/520/www.atptour.com/-/media/images/news/2016-photo-upload/roland-garros-2015-final-stadium.jpg"
+alt="Roland Garros match" class="mainpic">
+
+<p> Roland-Garros, aka The French Open, is the second Grand Slam on the tennis calendar. The tournament is played in May of each year for
+  two weeks. It is named after World War I fighter pilot, Eugene Adrien Roland Georges Garros. In 1928 the tennis stadium was named after him
+  to honor his legacy.
+</p>
+
+
+<p> Roland-Garros is the only grand slam that is played on a clay court. The clay court provides a large contrast, and for some players
+  is much harder than playing on a hard court. On a clay court, the ball bounces higher and slower compared to a hard court, and obviously
+  players will slide a lot more compared to a firmer surface. As mentioned before, this can be good for some players and bad for others, but
+  no one excels on clay like the one and only Rafael Nadal, aka The King of the Clay.
+</p>
+
+<h2><u>The King of the Clay</u></h2>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1tSDyLeUwJ4"
+frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="rafavid">
+</iframe>
+
+<p>
+Rafa Nadal, a top ranked tennis pro throughout his decorated career, has been hailed one of the best to ever play on clay courts. He currently
+hold the record for most singles wins at Roland-Garros, winning the Grand Slam 12 times so far. The gold medal Spanish Olympian, is so good on
+clay in part due to his athleticism, and due to the ball moving slower he is able to deliever a powerful shot.<br>
+
+</br>Click through to see some of Rafa's dominance at Roland-Garros throughout his career:
+</p>
+
+<div class="slideshow-container">
+
+  <div class="mySlides fade">
+    <div class="numbertext"> 1/4 </div>
+    <img src="https://images.prismic.io/fft-rg-commun-news/31ab21668b9052092b731128b908e37403da7d08_roland-garros-2018-rafael-nadal-news.jpg?auto=compress,format"
+     style="width: 100%">
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext"> 2/4 </div>
+    <img src="https://www.tennisworldusa.org/imgb/90376/roland-garros-in-autumn-is-rafael-nadal-still-the-favoritewhat-about-roger-federer.jpg"
+     style="width: 100%">
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext"> 3/4 </div>
+    <img src="https://www.telegraph.co.uk/content/dam/tennis/2018/04/27/TELEMMGLPICT000161710865_trans%2B%2Bmxde73gdOqcage9hCJ4hKhxo7k3IcFzOpcVpLpEd-fY.jpeg"
+     style="width: 100%">
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext"> 4/4 </div>
+    <img src="https://cdn.cnn.com/cnnnext/dam/assets/150416141205-rafa-nadal-clay-full-169.jpg"
+     style="width: 100%">
+  </div>
+
+  <a class="prev" onclick="plusSlides(-1)">Back</a>
+  <a class="next" onclick="plusSlides(1)">Next</a>
+
+</div>
+<br>
+
+<div style="text-align: center">
+  <span class="dot" onclick="currentslide(1)"></span>
+  <span class="dot" onclick="currentslide(2)"></span>
+  <span class="dot" onclick="currentslide(3)"></span>
+  <span class="dot" onclick="currentslide(4)"></span>
+</div>
+
+
+<script>Roland-Garros/rolgar.js</script>
 
 </body>
 </html>
