--- a/usopen.html
+++ b/usopen.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>U.S. Open</title>
   <link href="US Open/usopen.css" rel="stylesheet"  type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Actor' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Poppins:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="topnav">
@@ -14,6 +16,12 @@
     <a href= "wimbledon.html">Wimbledon</a>
     <a href= "usopen.html">US Open</a>
   </div>
+
+  <h1><strong>US Open</strong></h1>
+  <h2><strong>New York, New York</strong></h2>
+
+<img src="https://www.tennistours.com/img/tournament-images/us-open-index.jpg"
+alt="US Open match" class="mainpic">
 
 </body>
 </html>
